UI: fix spacing while creating logic (#7233)
* UI: fix spacing while creating logic

* Fix ordering

--- a/phytoplankton-console/src/components/ui/LogicBuilder/index.module.less
+++ b/phytoplankton-console/src/components/ui/LogicBuilder/index.module.less
@@ -154,6 +154,7 @@
       min-width: 120px;
     }
     .rule--value {
+      flex: 2;
       .widget--widget {
         margin-bottom: 0;
         flex: 1;
@@ -353,7 +354,7 @@
       }
       .rule--value {
         &:has(.rule--widget) {
-          flex: 1;
+          flex: 2;
         }
         .rule--widget--DATETIME .widget--has-no-valuesrcs,
         .rule--widget--TIME .widget--has-no-valuesrcs {
@@ -413,20 +414,18 @@
   display: flex;
   flex-direction: row;
   gap: 15px;
+  margin-left: 0.5rem;
 }
 
 .label {
   display: flex;
   gap: 5px;
   white-space: pre-wrap;
+  align-items: center;
 
   svg {
     width: 18px;
   }
-}
-
-.numberInputWrapper {
-  width: 90px;
 }
 
 .icon {
